--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,31 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>lambda-from-string</name>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Java8 library that can create a lambda from its code stored in a string</description>
+    <url>https://github.com/greenjoe/lambdaFromString</url>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://raw.githubusercontent.com/greenjoe/lambdaFromString/master/LICENSE</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Paweł Chorążyk</name>
+            <email>joegreen+github@joegreen.pl</email>
+            <url>http://joegreen.pl</url>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:greenjoe/lambdaFromString.git</connection>
+        <developerConnection>scm:git:git@github.com:greenjoe/lambdaFromString.git</developerConnection>
+        <url>git@github.com:greenjoe/lambdaFromString.git</url>
+    </scm>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -54,7 +77,6 @@
                 </executions>
             </plugin>
         </plugins>
-
     </build>
 
     <dependencies>
@@ -64,6 +86,6 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
 </project>
