--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>4.4.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
