--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>${project.groupId}:${project.artifactId}</name>
+    <name>Lambda from String</name>
     <description>Java8 library that can create a lambda from its code stored in a string</description>
     <url>https://github.com/greenjoe/lambdaFromString</url>
 
