--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>pl.joegreen</groupId>
     <artifactId>lambda-from-string</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>Lambda from String</name>
@@ -29,7 +29,8 @@
         <connection>scm:git:git@github.com:greenjoe/lambdaFromString.git</connection>
         <developerConnection>scm:git:git@github.com:greenjoe/lambdaFromString.git</developerConnection>
         <url>git@github.com:greenjoe/lambdaFromString.git</url>
-    </scm>
+      <tag>lambda-from-string-1.3</tag>
+  </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
