--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>pl.joegreen</groupId>
     <artifactId>lambda-from-string</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Lambda from String</name>
@@ -29,7 +29,7 @@
         <connection>scm:git:git@github.com:greenjoe/lambdaFromString.git</connection>
         <developerConnection>scm:git:git@github.com:greenjoe/lambdaFromString.git</developerConnection>
         <url>git@github.com:greenjoe/lambdaFromString.git</url>
-      <tag>lambda-from-string-1.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
