--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>4.4.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
