--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>1.7-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Lambda from String</name>
+    <name>lambdaFromString</name>
     <description>Java8 library that can create a lambda from its code stored in a string</description>
     
 	<url>${jonathanschilling.git.url}${project.name}</url>
