--- a/pom.xml
+++ b/pom.xml
@@ -62,4 +62,22 @@
             <version>3.6</version>
         </dependency>
     </dependencies>
+    
+    <build>
+    	<plugins>
+    		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.release}</source>
+					<target>${java.release}</target>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
+				</configuration>
+			</plugin>
+    		
+    	</plugins>
+    </build>
 </project>
