--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+					<release></release>
 					<source>${java.release}</source>
 					<target>${java.release}</target>
 					<compilerArgs>
